# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//lib/device/vr/buildflags/buildflags.gni")
import("//lib/testing/test.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")  # For generate_jni().
}

if (is_mac) {
  import("//build/config/mac/mac_sdk.gni")
}

is_linux_without_udev = is_linux && !use_udev

test("device_unittests") {
  sources = [
    "base/synchronization/one_writer_seqlock_unittest.cc",
    "bluetooth/bluetooth_adapter_mac_unittest.mm",
    "bluetooth/bluetooth_adapter_unittest.cc",
    "bluetooth/bluetooth_adapter_win_unittest.cc",
    "bluetooth/bluetooth_advertisement_unittest.cc",
    "bluetooth/bluetooth_device_unittest.cc",
    "bluetooth/bluetooth_device_win_unittest.cc",
    "bluetooth/bluetooth_discovery_filter_unittest.cc",
    "bluetooth/bluetooth_local_gatt_characteristic_unittest.cc",
    "bluetooth/bluetooth_local_gatt_descriptor_unittest.cc",
    "bluetooth/bluetooth_local_gatt_service_unittest.cc",
    "bluetooth/bluetooth_low_energy_win_unittest.cc",
    "bluetooth/bluetooth_remote_gatt_characteristic_unittest.cc",
    "bluetooth/bluetooth_remote_gatt_descriptor_unittest.cc",
    "bluetooth/bluetooth_remote_gatt_service_unittest.cc",
    "bluetooth/bluetooth_service_record_win_unittest.cc",
    "bluetooth/bluetooth_task_manager_win_unittest.cc",
    "bluetooth/bluetooth_uuid_unittest.cc",
    "bluetooth/device_unittest.cc",
    "bluetooth/string_util_icu_unittest.cc",
    "bluetooth/test/bluetooth_gatt_server_test.cc",
    "bluetooth/test/bluetooth_gatt_server_test.h",
    "bluetooth/test/bluetooth_test.cc",
    "bluetooth/test/bluetooth_test.h",
    "bluetooth/test/bluetooth_test_android.cc",
    "bluetooth/test/bluetooth_test_android.h",
    "bluetooth/test/bluetooth_test_mac.h",
    "bluetooth/test/bluetooth_test_mac.mm",
    "bluetooth/test/bluetooth_test_win.cc",
    "bluetooth/test/bluetooth_test_win.h",
    "bluetooth/test/mock_bluetooth_cbcharacteristic_mac.h",
    "bluetooth/test/mock_bluetooth_cbcharacteristic_mac.mm",
    "bluetooth/test/mock_bluetooth_cbdescriptor_mac.h",
    "bluetooth/test/mock_bluetooth_cbdescriptor_mac.mm",
    "bluetooth/test/mock_bluetooth_cbperipheral_mac.h",
    "bluetooth/test/mock_bluetooth_cbperipheral_mac.mm",
    "bluetooth/test/mock_bluetooth_cbservice_mac.h",
    "bluetooth/test/mock_bluetooth_cbservice_mac.mm",
    "bluetooth/test/mock_bluetooth_central_manager_mac.h",
    "bluetooth/test/mock_bluetooth_central_manager_mac.mm",
    "bluetooth/test/test_bluetooth_adapter_observer.cc",
    "bluetooth/test/test_bluetooth_adapter_observer.h",
    "bluetooth/test/test_bluetooth_local_gatt_service_delegate.cc",
    "bluetooth/test/test_bluetooth_local_gatt_service_delegate.h",
    "bluetooth/uribeacon/uri_encoder_unittest.cc",
   # "fido/ctap_request_unittest.cc",
   # "fido/ctap_response_unittest.cc",
   # "fido/fake_fido_discovery_unittest.cc",
   # "fido/fido_ble_connection_unittest.cc",
   # "fido/fido_ble_device_unittest.cc",
   # "fido/fido_ble_frames_unittest.cc",
   # "fido/fido_discovery_unittest.cc",
   # "fido/fido_hid_message_unittest.cc",
   # "fido/fido_parsing_utils_unittest.cc",
   # "fido/fido_request_handler_unittest.cc",
   # "fido/get_assertion_handler_unittest.cc",
   # "fido/get_assertion_task_unittest.cc",
   # "fido/make_credential_handler_unittest.cc",
   # "fido/make_credential_task_unittest.cc",
#    "fido/test_callback_receiver_unittest.cc",
#    "fido/u2f_command_constructor_unittest.cc",
 #   "fido/u2f_register_unittest.cc",
 #   "fido/u2f_request_unittest.cc",
 #   "fido/u2f_sign_unittest.cc",
    "gamepad/abstract_haptic_gamepad_unittest.cc",
    "gamepad/gamepad_provider_unittest.cc",
    "gamepad/gamepad_service_unittest.cc",
    "gamepad/public/mojom/gamepad_mojom_traits_unittest.cc",
    "test/run_all_unittests.cc",
  ]

  deps = [
    "//lib/base/test:test_support",
    "//lib/base/third_party/dynamic_annotations:dynamic_annotations",
    #"//components/apdu",
    #"//components/cbor",
    "//lib/device/base/synchronization",
    "//lib/device/bluetooth",
    "//lib/device/bluetooth:deprecated_experimental_mojo",
    "//lib/device/bluetooth:mocks",
    "//lib/device/bluetooth/uribeacon",
    #"//lib/device/fido",
    #"//lib/device/fido:mocks",
    #"//lib/device/fido:test_support",
    "//lib/device/gamepad",
    "//lib/device/gamepad:test_helpers",
    "//lib/device/gamepad/public/cpp:shared_with_blink",
    "//lib/device/gamepad/public/mojom",
    "//lib/device/gamepad/public/mojom:gamepad_mojom_traits_test",
    "//lib/device/geolocation:unittests",
    #"//lib/mojo/common",
    "//lib/mojo/edk",
    "//lib/mojo/public/cpp/bindings",
    "//lib/net",
    "//lib/testing/gmock",
    "//lib/testing/gtest",
    "//third_party/blink/public:blink_headers",
    "//tools/usb_gadget",
    "//lib/url",
  ]

  # U2F and Serial:
  # Android doesn't compile.
  # Linux, requires udev.
  if (!is_linux_without_udev && !is_android) {
    #sources += [
    #  "fido/fido_hid_device_unittest.cc",
    #  "fido/fido_hid_discovery_unittest.cc",
    #]
    deps += [
     # "//lib/device/fido:test_support",
      "//lib/services/device/public/cpp/hid",
      "//lib/services/device/public/mojom",
      "//lib/services/service_manager/public/cpp",
      "//lib/services/service_manager/public/mojom",
    ]

    # Serial is supported in below platforms. See //device/servial/BUILD.gn
    if (is_win || is_linux || is_mac) {
      sources += [ "serial/serial_device_enumerator_unittest.cc" ]
      deps += [ "//lib/device/serial" ]
      if (is_linux || is_mac) {
        sources += [ "serial/serial_io_handler_posix_unittest.cc" ]
      }
    }
  }

  if (use_udev) {
    sources += [ "udev_linux/udev_unittest.cc" ]
    deps += [ "//lib/device/udev_linux" ]
  }

  # USB does not compile on iOS.
  if (!is_ios) {
    sources += [
      "test/test_device_client.cc",
      "test/test_device_client.h",
      "usb/mojo/device_impl_unittest.cc",
      "usb/mojo/device_manager_impl_unittest.cc",
      "usb/mojo/mock_permission_provider.cc",
      "usb/mojo/mock_permission_provider.h",
      "usb/public/cpp/filter_utils_unittest.cc",
      "usb/usb_descriptors_unittest.cc",
      "usb/usb_device_handle_unittest.cc",
      "usb/usb_service_unittest.cc",
      "usb/webusb_descriptors_unittest.cc",
    ]
    deps += [
      ":usb_test_gadget",
      "//lib/device/base",
      "//lib/device/base:mocks",
      "//lib/device/usb",
      "//lib/device/usb:test_support",
      "//lib/device/usb/mojo",
      "//lib/device/usb/public/cpp",
      "//lib/device/usb/public/mojom",
      "//lib/net:test_support",
    ]

    if (!is_android) {
      sources += [ "usb/usb_ids_unittest.cc" ]
    }
  }

  # UsbContext is a libusb-specific object.
  if (is_mac || is_win) {
    sources += [ "usb/usb_context_unittest.cc" ]
    deps += [ "//third_party/libusb" ]
  }

  if (is_android) {
    deps += [
      ":bluetooth_test_java",
      ":bluetooth_test_jni_headers",
      "//lib/device/geolocation:geolocation_java",
      "//lib/device/geolocation:geolocation_java_test_support",
      "//lib/device/usb:java",
    ]
  }

  if ((is_chromeos || is_linux) && use_dbus) {
    configs += [ "//build/config/linux/dbus" ]

    sources += [
      "bluetooth/bluez/bluetooth_adapter_profile_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_advertisement_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_gatt_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_service_attribute_value_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_service_record_bluez_unittest.cc",
      "bluetooth/bluez/bluetooth_socket_bluez_unittest.cc",
      "bluetooth/dbus/bluetooth_gatt_application_service_provider_unittest.cc",
      "bluetooth/test/bluetooth_test_bluez.cc",
      "bluetooth/test/bluetooth_test_bluez.h",
    ]

    deps += [ "//lib/dbus" ]
  }

  #if (is_linux) {
      # BLE discovery: works on Linux.
    #sources += [ "fido/fido_ble_discovery_unittest.cc" ]
  #}

  if (is_mac) {
    deps += [ "//third_party/ocmock" ]
    ldflags = [ "-ObjC" ]
    libs = [
      "IOBluetooth.framework",
      "IOKit.framework",
    ]

    # In the OSX 10.10 SDK, CoreBluetooth became a top level framework.
    # Previously, it was nested in IOBluetooth. In order for Chrome to run on
    # OSes older than OSX 10.10, the top level CoreBluetooth framework must be
    # weakly linked.
    if (mac_sdk_version == "10.10") {
      ldflags += [
        "-weak_framework",
        "CoreBluetooth",
      ]
    }
  }

  if (is_win) {
    sources += [
      "bluetooth/bluetooth_classic_win_fake.cc",
      "bluetooth/bluetooth_classic_win_fake.h",
      "bluetooth/bluetooth_low_energy_win_fake.cc",
      "bluetooth/bluetooth_low_energy_win_fake.h",
    ]
  }

 # if (enable_vr && is_android) {
 #   sources += [
 #     "vr/orientation/orientation_device_provider_unittest.cc",
 #     "vr/orientation/orientation_device_unittest.cc",
 #     "vr/vr_device_base_unittest.cc",
 #     "vr/vr_display_impl_unittest.cc",
 #   ]
#
 #   deps += [
 #     "//lib/device/vr",
 #     "//lib/device/vr:fakes",
 #     "//lib/device/vr:java",
 #     "//lib/device/vr/public/mojom",
 #     "//lib/services/device/public/cpp/generic_sensor",
 #     "//lib/ui/display",
 #     "//lib/ui/display:test_support",
 #   ]
 # }
}

source_set("usb_test_gadget") {
  # testonly = true

  sources = [
    "test/usb_test_gadget.h",
    "test/usb_test_gadget_impl.cc",
  ]

  deps = [
    "//lib/device/base",
    "//lib/device/usb",
    "//lib/net:test_support",
  ]
}

if (is_android) {
  bluetooth_java_sources_needing_jni = [
    "bluetooth/test/android/java/src/org/chromium/device/bluetooth/Fakes.java",
  ]

  generate_jni("bluetooth_test_jni_headers") {
    sources = bluetooth_java_sources_needing_jni
    jni_package = "bluetooth"
  }

  android_library("bluetooth_test_java") {
    # testonly = true
    java_files = bluetooth_java_sources_needing_jni
    deps = [
      "//lib/base:base_java",
      "//lib/components/location/android:location_java",
      "//lib/device/bluetooth:java",
      "//third_party/android_tools:android_support_annotations_java",
    ]

    deps += android_extra_test_deps

    srcjar_deps = [ ":bluetooth_test_javagen" ]
  }

  junit_binary("device_junit_tests") {
    java_files = [
      "gamepad/android/junit/src/org/chromium/device/gamepad/GamepadMappingsTest.java",
      "geolocation/android/junit/src/org/chromium/device/geolocation/LocationProviderTest.java",
    ]
    deps = [
      "$google_play_services_package:google_play_services_base_java",
      "$google_play_services_package:google_play_services_basement_java",
      "$google_play_services_package:google_play_services_location_java",
      "//lib/base:base_java",
      "//lib/base:base_java_test_support",
      "//lib/base:base_junit_test_support",
      "//lib/device/gamepad:java",
      "//lib/device/geolocation:geolocation_java",
      "//lib/device/geolocation:geolocation_java_test_support",
      "//lib/mojo/public/java:bindings_java",
      "//third_party/android_tools:android_support_annotations_java",
    ]
    srcjar_deps = [ "//lib/device/gamepad:java_enums_srcjar" ]
  }

  java_cpp_enum("bluetooth_test_javagen") {
    sources = [
      "bluetooth/test/bluetooth_test.h",
    ]
  }
}
